# Tetrika_test

./: README.md  broken_task_2.py  mypy.ini  pyproject.toml
task1/: solution_1.py  test_1.py
task2/: beasts.csv  solution_2.py  test_2.py
task3/: solution_3.py  test_3.py
