[tool.poetry]
name = "juniors-interview"
version = "0.1.0"
description = ""
authors = ["Aleksandr Ryabinskij <olexander.rabota@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
pytest = "^8.3.3"
requests = "^2.32.3"
beautifulsoup4 = "^4.12.3"
types-requests = "^2.32.0.20241016"
types-beautifulsoup4 = "^4.12.0.20241020"


[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
mypy = "^1.13.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
